# subxt-repro

./: Cargo.toml  metadata.scale
src/: main.rs
