[package]
name = "subxt-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.37.0"
subxt-signer = "0.37.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "time"] }
